# graphein

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
dataset/html/: Ancient_Greek_religion.html  Aphrodite.html  Apollo.html  Ares.html  Artemis.html  Athena.html  Chthonic_deities.html  Cronus.html  Deity.html  Demeter.html  Dionysus.html  Gaia.html  Greek_mythology.html  Greek_primordial_deities.html  Greek_underworld.html  Hades.html  Hephaestus.html  Hera.html  Hermes.html  Hestia.html  Mount_Olympus.html  Pantheon_(religion).html  Persephone.html  Poseidon.html  Rhea_(mythology).html  Titanomachy.html  Titans.html  Twelve_Olympians.html  Uranus_(mythology).html  Zeus.html
scripts/: generate_acl.sh
src/graphein/: chunker.py  embed.py.old  html_parser.py  ontology.py
