[project]
name = "graphein"
version = "0.1.0"
description = "Experiments on GraphRAG"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "beautifulsoup4>=4.14.3",
    "falkordb>=1.6.0",
    "graphrag-sdk>=0.8.2",
    "markdownify>=1.2.2",
    "ollama>=0.6.1",
    "typer>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphein"]
